--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.2.0",
+    "@babel/preset-env": "7.12.1",
     "parcel-bundler": "^1.6.1"
   },
   "keywords": []
