--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@babel/core": "7.2.0",
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
-    "parcel-bundler": "^1.6.1"
+    "parcel-bundler": "1.12.4"
   },
   "keywords": []
 }
