--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": [
-    "env"
-  ],
-  "plugins": [
-    "transform-runtime"
-  ],
-  "parserOpts": {
-    "plugins": [
-      "dynamicImport"
-    ]
-  }
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
