--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
   "name": "hotpink",
   "version": "1.0.0",
-  "description": "make fancy webpage with vanillaJS",
-  "main": "index.html",
+  "description": "amazing webpage by vanillaJS",
+  "main": "src/index.html",
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "dev": "parcel src/index.html --open",
+    "build": "parcel build src/index.html",
+    "start": "serve dist/ -l 8080",
+    "format": "prettier --write src/**/*.js src/index.js",
+    "lint": "eslint src/ --ext .js"
   },
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "parcel-bundler": "1.12.4"
+    "eslint": "^7.13.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.2",
+    "parcel-bundler": "1.12.4",
+    "prettier": "^2.1.2"
   },
-  "keywords": []
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "yarn format",
+      "yarn lint"
+    ]
+  }
 }
